--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-git-config",
-  "description": "Parse .git/config into a JavaScript object.",
+  "description": "Parse `.git/config` into a JavaScript object. sync or async.",
   "version": "0.1.0",
   "homepage": "https://github.com/jonschlinkert/parse-git-config",
   "author": {
@@ -29,12 +29,14 @@
     "test": "mocha"
   },
   "dependencies": {
-    "ini": "^1.3.3",
-    "look-up": "^0.6.0"
+    "ini": "^1.3.3"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "*"
   },
-  "keywords": []
+  "keywords": [
+    "config",
+    "git"
+  ]
 }
