--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parse-git-config",
   "description": "Parse `.git/config` into a JavaScript object. sync or async.",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "homepage": "https://github.com/jonschlinkert/parse-git-config",
   "author": {
     "name": "Jon Schlinkert",
@@ -37,6 +37,7 @@
   },
   "keywords": [
     "config",
-    "git"
+    "git",
+    "parse"
   ]
 }
