--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ini": "^1.3.3"
   },
   "devDependencies": {
+    "gulp-format-md": "^0.1.7",
     "mocha": "*",
     "should": "*"
   },
@@ -32,6 +33,15 @@
     "parse"
   ],
   "verb": {
+    "run": true,
+    "toc": false,
+    "layout": "default",
+    "tasks": [
+      "readme"
+    ],
+    "plugins": [
+      "gulp-format-md"
+    ],
     "related": {
       "list": [
         "parse-github-url",
@@ -39,6 +49,12 @@
         "parse-author",
         "parse-authors"
       ]
+    },
+    "reflinks": [
+      "verb"
+    ],
+    "lint": {
+      "reflinks": true
     }
   }
 }
