--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "test": "mocha"
   },
   "dependencies": {
-    "ini": "^1.3.3"
+    "ini": "^1.3.4"
   },
   "devDependencies": {
     "gulp-format-md": "^0.1.7",
-    "mocha": "*",
-    "should": "*"
+    "mocha": "^2.4.5",
+    "should": "^8.2.2"
   },
   "keywords": [
     "config",
@@ -33,14 +33,6 @@
     "parse"
   ],
   "verb": {
-    "related": {
-      "list": [
-        "parse-github-url",
-        "parse-gitignore",
-        "parse-author",
-        "parse-authors"
-      ]
-    },
     "run": true,
     "toc": false,
     "layout": "default",
@@ -50,6 +42,16 @@
     "plugins": [
       "gulp-format-md"
     ],
+    "related": {
+      "list": [
+        "parse-github-url",
+        "parse-gitignore",
+        "parse-author",
+        "parse-authors",
+        "git-user-name",
+        "git-username"
+      ]
+    },
     "reflinks": [
       "verb"
     ],
