--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parse-git-config",
   "description": "Parse `.git/config` into a JavaScript object. sync or async.",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "homepage": "https://github.com/jonschlinkert/parse-git-config",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/parse-git-config",
@@ -20,12 +20,13 @@
     "test": "mocha"
   },
   "dependencies": {
+    "extend-shallow": "^2.0.1",
+    "git-config-path": "^0.2.0",
     "ini": "^1.3.4"
   },
   "devDependencies": {
     "gulp-format-md": "^0.1.7",
-    "mocha": "^2.4.5",
-    "should": "^8.2.2"
+    "mocha": "^2.4.5"
   },
   "keywords": [
     "config",
