--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "extend-shallow": "^2.0.1",
+    "fs-exists-sync": "^0.1.0",
     "git-config-path": "^1.0.0",
     "ini": "^1.3.4"
   },
