--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "test": "mocha"
   },
   "dependencies": {
-    "extend-shallow": "^2.0.1",
+    "expand-tilde": "^2.0.2",
+    "extend-shallow": "^3.0.2",
     "fs-exists-sync": "^0.1.0",
     "git-config-path": "^1.0.1",
-    "ini": "^1.3.4"
+    "ini": "^1.3.5"
   },
   "devDependencies": {
-    "gulp-format-md": "^0.1.11",
-    "homedir-polyfill": "^1.0.1",
-    "mocha": "^3.2.0"
+    "gulp-format-md": "^1.0.0",
+    "mocha": "^3.5.3",
+    "homedir-polyfill": "^1.0.1"
   },
   "keywords": [
     "config",
