--- a/package.json
+++ b/package.json
@@ -26,15 +26,13 @@
   },
   "dependencies": {
     "expand-tilde": "^2.0.2",
-    "extend-shallow": "^3.0.2",
-    "fs-exists-sync": "^0.1.0",
     "git-config-path": "^1.0.1",
     "ini": "^1.3.5"
   },
   "devDependencies": {
     "gulp-format-md": "^1.0.0",
-    "mocha": "^3.5.3",
-    "homedir-polyfill": "^1.0.1"
+    "homedir-polyfill": "^1.0.1",
+    "mocha": "^3.5.3"
   },
   "keywords": [
     "config",
